--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "aa-ahmed-aa/dorm",
-    "description": "this is a compiler package for compiling and running c/c++ files this package is designed to can add any other compilers later.",
-    "keywords": ["command-line", "compilers", "c/c++","compiler-manager"],
+    "description": "this is a compiler package for compiling and running c and cpp files this package is designed to can add any other compilers later.",
+    "keywords": ["command-line", "compilers", "c", "cpp","compiler-manager"],
     "license": "MIT",
     "authors": [
         {
