--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "aa-ahmed-aa/dorm",
     "description": "This is a compiler package for compiling and running c and cpp files this package is designed to can add any other compilers later.",
-    "keywords": ["command-line", "compilers", "c", "cpp","compiler-manager"],
+    "keywords": ["command-line", "compilers", "c", "cpp","compiler-manager", "java", "javac", "python", "python2", "python3"],
     "license": "MIT",
     "authors": [
         {
